<resources>
    <string name="app_name">App</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_daily_routines">Daily Routines</string>
    <string name="menu_manage_routines">Manage Routines</string>
    <string name="menu_trainers">Trainers</string>

    <string name="add_new_routine">Add New Routine</string>
    <string name="routine_name">Routine name</string>
    <string name="exercise_name">Exercise name</string>
    <string name="series">Series</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="add_exercise">Add exercise</string>
    <string name="finish">Finish</string>

    <string name="daily_routines">Daily Routines</string>
    <string name="title_activity_daily_routines">DailyRoutinesActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>